added portfolio item :nail_care:

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,10 +1,21 @@
+aside,
 main {
     font-family: 'Pavanam', sans-serif;
+}
+
+main {
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-wrap: wrap;
     font-size: 2.3rem;
+}
+
+h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 2.3rem;
+    font-weight: normal;
 }
 
 section {
@@ -18,6 +29,10 @@ section {
     justify-content: center;
     border: 1px solid;
     position: relative;
+}
+
+section img {
+    max-width: 100%;
 }
 
 section:hover {
@@ -96,4 +111,42 @@ i.far {
 
 section:hover i.far {
     display: block;
+}
+
+//Portfolio
+
+aside {
+    width: 100vw;
+    font-size: 2.4rem;
+    border: 1px solid;
+    border-top: 0px;
+}
+
+h2 {
+    padding: 0;
+    margin: 0;
+    font-size: 2.4rem;
+    font-weight: normal;
+    text-decoration: underline;
+}
+
+aside img {
+    width: 100%;
+}
+
+ul {
+    padding: 100px;
+    margin: 0;
+    background-color: #fff;
+}
+
+li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.exit {
+    position: fixed;
+    top: 0;
 }
