--- a/styles/style.css
+++ b/styles/style.css
@@ -368,12 +368,20 @@ aside {
   border-top: 0px;
 }
 
-h2 {
+h2,
+aside p {
   padding: 0;
   margin: 0;
   font-size: 2.4rem;
   font-weight: normal;
+}
+
+h2 {
   text-decoration: underline;
+}
+
+aside p {
+  margin-bottom: 25px;
 }
 
 aside img {
@@ -390,6 +398,23 @@ li {
   padding: 0;
   margin: 0;
   list-style: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+li h2,
+li div {
+  width: 30%;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+}
+
+li div {
+  width: 70%;
 }
 
 .exit {
