--- a/styles/style.css
+++ b/styles/style.css
@@ -386,6 +386,7 @@ aside p {
 
 aside img {
   width: 100%;
+  height: auto;
 }
 
 ul {
@@ -407,14 +408,25 @@ li {
 
 li h2,
 li div {
-  width: 30%;
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
 }
 
+li h2 {
+  width: 25%;
+  margin-right: 5%;
+}
+
 li div {
   width: 70%;
+}
+
+@media (max-width: 600px) {
+  li div p,
+  li h2 {
+    font-size: 1.7rem;
+  }
 }
 
 .exit {
