--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
