--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -31,10 +31,6 @@ section {
     position: relative;
 }
 
-section img {
-    max-width: 100%;
-}
-
 section:hover {
     background-color: #dcdcdc;
 }
@@ -151,31 +147,34 @@ ul {
 }
 
 li {
+    list-style: none;
+}
+
+.case {
     padding: 0;
     margin: 0;
-    list-style: none;
     flex-wrap: wrap;
     display: flex;
 }
 
-li h2,
-li div {
+.case h2,
+.case div {
     flex-grow: 2;
 }
 
-li h2 {
+.case h2 {
     width: 25%;
     margin-right: 5%;
 }
 
-li div {
+.case div {
     width: 70%;
 }
 
 
 @media (max-width: 600px) {
-    li div p,
-    li h2 {
+    .case div p,
+    .case h2 {
         font-size: 1.7rem;
     }
 }
