fixing font sizes in portfolio

--- a/styles/style.css
+++ b/styles/style.css
@@ -422,10 +422,17 @@ li {
   width: 70%;
 }
 
+@media (max-width: 750px) {
+  .case div p,
+  .case h2 {
+    font-size: 1.5rem;
+  }
+}
+
 @media (max-width: 600px) {
   .case div p,
   .case h2 {
-    font-size: 1.7rem;
+    font-size: 1.2rem;
   }
 }
 
