--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -29,9 +29,11 @@ section {
     justify-content: center;
     border: 1px solid;
     position: relative;
+    transition-duration: .2s;
 }
 
-section:hover {
+section:hover,
+section:focus {
     background-color: #dcdcdc;
 }
 
@@ -66,13 +68,19 @@ a {
 
 .two, 
 .contact:hover .one,
-.contact:focus-within .one {
+.contact:focus-within .one,
+.cases:hover .one,
+.cases:focus-within .one {
     display: none;
+    opacity: 0;
 }
 
 .contact:hover .two,
-.contact:focus-within .two {
+.contact:focus-within .two,
+.cases:hover .two,
+.cases:focus-within .two {
     display: block;
+    opacity: 1;
 }
 
 .two {
@@ -81,9 +89,10 @@ a {
 
 // Decorations
 
-i.far {
+i.fas,
+i.fab {
     position: absolute;
-    display: none;
+    opacity: 0;
 }
 
 .a {
@@ -106,8 +115,9 @@ i.far {
     right: 25px;
 }
 
-section:hover i.far {
-    display: block;
+section:hover i.fas,
+section:hover i.fab {
+    opacity: 1;
 }
 
 //Portfolio
