--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -8,13 +8,13 @@ main {
     height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    font-size: 2.3rem;
+    font-size: 3.2rem;
 }
 
 h1 {
     padding: 0;
     margin: 0;
-    font-size: 2.3rem;
+    font-size: 3.2rem;
     font-weight: normal;
 }
 
@@ -27,7 +27,7 @@ section {
     text-align: center;
     align-items: center;
     justify-content: center;
-    border: 1px solid;
+    // border: 1px solid;
     position: relative;
     transition-duration: .2s;
 }
@@ -42,16 +42,23 @@ a {
     color: #000;
 }
 
-.about {
-    border-left: 0;
-}
+// .about {
+//     border-left: 0;
+// }
 
-.contact {
-    border-left: 0;
-}
+// .contact {
+//     border-left: 0;
+// }
 
-.cases, .contact {
-    border-top: 0;
+// .cases, .contact {
+//     border-top: 0;
+// }
+
+@media (max-width: 900px) {
+    section,
+    h1 {
+        font-size: 2rem;
+    }
 }
 
 @media (max-width: 600px) {
