--- a/styles/style.css
+++ b/styles/style.css
@@ -250,13 +250,13 @@ main {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  font-size: 2.3rem;
+  font-size: 3.2rem;
 }
 
 h1 {
   padding: 0;
   margin: 0;
-  font-size: 2.3rem;
+  font-size: 3.2rem;
   font-weight: normal;
 }
 
@@ -277,7 +277,6 @@ section {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid;
   position: relative;
   -webkit-transition-duration: .2s;
           transition-duration: .2s;
@@ -293,16 +292,11 @@ a {
   color: #000;
 }
 
-.about {
-  border-left: 0;
-}
-
-.contact {
-  border-left: 0;
-}
-
-.cases, .contact {
-  border-top: 0;
+@media (max-width: 900px) {
+  section,
+  h1 {
+    font-size: 2rem;
+  }
 }
 
 @media (max-width: 600px) {
