--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,209 +1,59 @@
-aside,
-main {
-    font-family: 'lunchtype22regular', sans-serif;
+body {
+    background-color: #292929;
+    color: rgb(236, 236, 236);
 }
 
 main {
+    padding: 100px;
+    max-width: 800px;
+    line-height: 40px;
+    font-family: 'lunchtype24expanded_regular', sans-serif;
     width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 3.2rem;
+    color: rgb(236, 236, 236);
+    font-size: 2rem;
 }
 
-h1 {
-    padding: 0;
-    margin: 0;
-    font-size: 3.2rem;
-    font-weight: normal;
+.content {
+    padding: 100px;
 }
 
-section {
-    padding: 30px;
-    width: 50vw;
+.color {
+    width: 100%;
     height: 50vh;
-    flex-grow: 2;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid;
-    position: relative;
-    transition-duration: .2s;
+    background-color: #6868e6;
 }
 
-section:hover,
-section:focus {
-    background-color: #dcdcdc;
-}
-
-a {
+main a {
+    color: rgb(236, 236, 236);
     text-decoration: none;
-    color: #000;
 }
 
-.about {
-    border-left: 0;
+ul a:hover {
+    font-family: 'lunchtype24expanded_regular', sans-serif;
 }
 
-.contact {
-    border-left: 0;
+h1 a:hover {
+    opacity: .5;
 }
 
-.cases, .contact {
-    border-top: 0;
-}
-
-@media (max-width: 900px) {
-    section,
-    h1 {
-        font-size: 2rem;
-    }
-}
-
-@media (max-width: 600px) {
-    section,
-    h1 {
-        font-size: 1.7rem;
-    }
-}
-
-.cases:hover a,
-.cases:focus-within a {
-    border-bottom: 1px solid;
-}
-
-.two, 
-.contact:hover .one,
-.contact:focus-within .one,
-.cases:hover .one,
-.cases:focus-within .one {
-    display: none;
-    opacity: 0;
-}
-
-.contact:hover .two,
-.contact:focus-within .two,
-.cases:hover .two,
-.cases:focus-within .two {
-    display: block;
-    opacity: 1;
-}
-
-.two {
-    border-bottom: 1px solid;
-}
-
-// Decorations
-
-i.fas,
-i.fab {
-    position: absolute;
-    opacity: 0;
-}
-
-.a {
-    top: 25px;
-    left: 25px;
-}
-
-.b {
-    bottom: 25px;
-    right: 25px;
-}
-
-.c {
-    bottom: 25px;
-    left: 25px;
-}
-
-.d {
-    top: 25px;
-    right: 25px;
-}
-
-section:hover i.fas,
-section:hover i.fab {
-    opacity: 1;
-}
-
-//Portfolio
-
-aside {
-    width: 100vw;
-    font-size: 2.4rem;
-    border: 1px solid;
-    border-top: 0px;
-}
-
-h2,
-aside p {
-    padding: 0;
+main a, h1, h2, h3 {
     margin: 0;
-    font-size: 2.4rem;
+    padding: 0;
     font-weight: normal;
 }
 
 h2 {
-    text-decoration: underline;
-}
-
-aside p {
-    margin-bottom: 25px;
-}
-
-aside img {
-    width: 100%;
-    height: auto;
+    color: #6868e6;
+    font-family: 'lunchtype22-regular', sans-serif;
+    text-transform: uppercase;
+    font-size: .7em;
+    margin-bottom: 10px;
 }
 
 ul {
-    padding: 100px;
-    margin: 0;
-    background-color: #fff;
-}
-
-li {
-    list-style: none;
-}
-
-.case {
     padding: 0;
-    margin: 0;
-    flex-wrap: wrap;
-    display: flex;
-}
-
-.case h2,
-.case div {
-    flex-grow: 2;
-}
-
-.case h2 {
-    width: 25%;
-    margin-right: 5%;
-}
-
-.case div {
-    width: 70%;
-}
-
-@media (max-width: 750px) {
-    .case div p,
-    .case h2 {
-        font-size: 1.5rem;
-    }
-}
-
-
-@media (max-width: 600px) {
-    .case div p,
-    .case h2 {
-        font-size: 1.2rem;
-    }
-}
-
-.exit {
-    position: fixed;
-    top: 0;
+    margin: 100px 0 0 0;
+    font-size: .85em;
+    line-height: 16px;
+    list-style: none;
 }
