--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,59 +1,77 @@
-body {
-    background-color: #292929;
-    color: rgb(236, 236, 236);
+aside,
+main {
+    font-family: 'inter', sans-serif;
 }
 
 main {
-    padding: 100px;
-    max-width: 800px;
-    line-height: 40px;
-    font-family: 'lunchtype24expanded_regular', sans-serif;
     width: 100vw;
-    color: rgb(236, 236, 236);
-    font-size: 2rem;
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 3.2rem;
 }
 
-.content {
-    padding: 100px;
-}
-
-.color {
-    width: 100%;
-    height: 50vh;
-    background-color: #6868e6;
-}
-
-main a {
-    color: rgb(236, 236, 236);
-    text-decoration: none;
-}
-
-ul a:hover {
-    font-family: 'lunchtype24expanded_regular', sans-serif;
-}
-
-h1 a:hover {
-    opacity: .5;
-}
-
-main a, h1, h2, h3 {
-    margin: 0;
+h1 {
     padding: 0;
+    margin: 0;
+    font-size: 3.2rem;
     font-weight: normal;
 }
 
-h2 {
-    color: #6868e6;
-    font-family: 'lunchtype22-regular', sans-serif;
-    text-transform: uppercase;
-    font-size: .7em;
-    margin-bottom: 10px;
+section {
+    padding: 30px;
+    width: 50vw;
+    height: 50vh;
+    flex-grow: 2;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    border: 1px solid;
+    transition-duration: .2s;
 }
 
-ul {
-    padding: 0;
-    margin: 100px 0 0 0;
-    font-size: .85em;
-    line-height: 16px;
-    list-style: none;
+section img {
+    max-width: 200px;
+    max-height: 100%;
+    position: absolute;
+    margin-top: -15px;
+}
+
+.width {
+    display: inline-block;
+    width: 200px;
+}
+
+.a {
+    height: 20vh;
+}
+
+.b {
+    align-items: flex-start;
+    height: 30vh;
+}
+
+@media (max-width: 900px) {
+
+    .width {
+        width: 100px;
+    }
+
+    section img {
+        width: 100px;
+    }
+    
+    section,
+    h1 {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 600px) {
+    section,
+    h1 {
+        font-size: 1.7rem;
+    }
 }
