--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,75 +1,11 @@
-aside,
 main {
-    font-family: 'inter', sans-serif;
-}
-
-main {
-    padding: 100px;
-    max-width: 800px;
-    line-height: 40px;
-    font-family: 'lunchtype24expanded_regular', sans-serif;
     width: 100vw;
-    color: rgb(236, 236, 236);
-    font-size: 2rem;
-}
-
-.content {
-    padding: 100px;
-}
-
-.color {
-    width: 100%;
-    height: 50vh;
-    flex-grow: 2;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    border: 1px solid;
-    transition-duration: .2s;
-}
-
-section img {
-    max-width: 200px;
-    max-height: 100%;
+    height: 100vh;
     position: absolute;
-    margin-top: -15px;
+    text-align: center;
 }
 
-.width {
-    display: inline-block;
-    width: 200px;
-}
-
-.a {
-    height: 20vh;
-}
-
-.b {
-    align-items: flex-start;
-    height: 30vh;
-}
-
-@media (max-width: 900px) {
-
-    .width {
-        width: 100px;
-    }
-
-    section img {
-        width: 100px;
-    }
-    
-    section,
-    h1 {
-        font-size: 2rem;
-    }
-}
-
-@media (max-width: 600px) {
-    section,
-    h1 {
-        font-size: 1.7rem;
-    }
+main img {
+    max-width: 100%;
+    max-height: 100%;
 }
