--- a/styles/style.css
+++ b/styles/style.css
@@ -237,88 +237,14 @@ html {
   overflow: hidden;
 }
 
-aside,
-main {
-  font-family: 'lunchtype22regular', sans-serif;
-}
-
 main {
   width: 100vw;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  font-size: 3.2rem;
-}
-
-h1 {
-  padding: 0;
-  margin: 0;
-  font-size: 3.2rem;
-  font-weight: normal;
-}
-
-section {
-  padding: 30px;
-  width: 50vw;
-  height: 50vh;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: relative;
-  border: 1px solid;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
-}
-
-section img {
-  max-width: 200px;
-  max-height: 100%;
   position: absolute;
-  margin-top: -15px;
+  text-align: center;
 }
 
-.width {
-  display: inline-block;
-  width: 200px;
-}
-
-.a {
-  height: 20vh;
-}
-
-.b {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  height: 30vh;
-}
-
-@media (max-width: 900px) {
-  .width {
-    width: 100px;
-  }
-  section,
-  h1 {
-    font-size: 2rem;
-  }
-}
-
-@media (max-width: 600px) {
-  section,
-  h1 {
-    font-size: 1.7rem;
-  }
+main img {
+  max-width: 100%;
+  max-height: 100%;
 }
