--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -1,11 +1,204 @@
+body,
 main {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    text-align: center;
+    font-family: 'Inter', sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: #39387A;
 }
 
-main img {
+p {
+    padding: 0;
+    margin: 0;
+}
+
+main {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border: 2px solid #000;
+}
+
+.splash {
+    width: 80%;
+    animation: splashOut 2.2s forwards;
+}
+
+.splash img {
+    display: block;
     max-width: 100%;
     max-height: 100%;
+}
+
+ul {
+    font-size: 45px;
+    color: #fff;
+    animation: splashIn 4.4s forwards;
+}
+
+ul a {
+    color: #fff;
+    text-decoration: none;
+}
+
+ul a:hover {
+    text-decoration: underline;
+}
+
+li.info,
+li.work,
+li.contact,
+li.gif {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    letter-spacing: -1px;
+    position: fixed;
+}
+
+.info {
+    top: 50px;
+    left: 50px;
+}
+
+li.info a {
+    text-decoration: underline;
+}
+
+.work {
+    top: 50px;
+    right: 50px;
+}
+
+.contact {
+    bottom: 50px;
+    left: 50px;
+}
+
+.gif {
+    bottom: 50px;
+    right: 50px;
+}
+
+.container {
+    overflow: scroll;
+    position: fixed;
+    width: 70%;
+    height: 70%;
+    background-color: #fff;
+    border: 2px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: splashIn 4.4s forwards;
+}
+
+.hold {
+    display: flex;
+    flex-grow: 2;
+    flex-wrap: wrap;
+    padding: 25px;
+}
+
+.hold p {
+    line-height: 1.32em;
+    font-size: 50px;
+    letter-spacing: -2px;
+    width: 50%;
+}
+
+.hold p:nth-child(2),
+.hold p:nth-child(4),
+.hold p:nth-child(6),
+.hold p:nth-child(8),
+.hold p:nth-child(10),
+.hold p:nth-child(12),
+.hold p:nth-child(14) {
+    text-align: right;
+}
+
+@media (max-width: 1320px) {
+    .textBrand {
+        display: none;
+    }
+
+    .hold p {
+        width: 90%;
+    }
+
+    .hold p:nth-child(2),
+    .hold p:nth-child(4),
+    .hold p:nth-child(6),
+    .hold p:nth-child(8),
+    .hold p:nth-child(10),
+    .hold p:nth-child(12),
+    .hold p:nth-child(14) {
+        width: 10%;
+    }
+}
+
+@media (max-width: 820px) {
+    .icon {
+        display: none;
+    }
+}
+
+@media (max-width: 810px) {
+    .hold p {
+        width: 100%;
+        text-align: center;
+    }
+
+    .hold p:nth-child(2),
+    .hold p:nth-child(4),
+    .hold p:nth-child(6),
+    .hold p:nth-child(8),
+    .hold p:nth-child(10),
+    .hold p:nth-child(12),
+    .hold p:nth-child(14) {
+        display: none;
+    }
+}
+
+@media (max-width: 650px) {
+    .hold p {
+        line-height: 1.5em;
+        font-size: 30px;
+        letter-spacing: -1px;
+    }
+}
+
+@keyframes splashIn {
+    0% {
+        display: none;
+        opacity: 0;
+    }
+    95% {
+        display: block;
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes splashOut {
+    0% {
+        opacity: 1;
+    }
+    25% {
+        transform: scale(1.2);
+    }
+    60% {
+        transform: scale(.9);
+    }
+    100% {
+        transform: scale(.1);
+        opacity: 0;
+    }
 }
