--- a/styles/style.css
+++ b/styles/style.css
@@ -282,10 +282,11 @@ main {
 }
 
 ul {
+  z-index: 100;
   font-size: 45px;
   color: #fff;
-  -webkit-animation: splashIn 4.4s forwards;
-          animation: splashIn 4.4s forwards;
+  -webkit-animation: splashIn 3s forwards;
+          animation: splashIn 3s forwards;
 }
 
 ul a {
@@ -333,6 +334,7 @@ li.info a {
 }
 
 .container {
+  z-index: 99;
   overflow: scroll;
   position: fixed;
   width: 70%;
@@ -348,8 +350,8 @@ li.info a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-animation: splashIn 4.4s forwards;
-          animation: splashIn 4.4s forwards;
+  -webkit-animation: splashIn 3s forwards;
+          animation: splashIn 3s forwards;
 }
 
 .hold {
@@ -461,17 +463,10 @@ li.info a {
   0% {
     opacity: 1;
   }
-  25% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
-  60% {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+  95% {
+    opacity: 1;
   }
   100% {
-    -webkit-transform: scale(0.1);
-            transform: scale(0.1);
     opacity: 0;
   }
 }
@@ -480,17 +475,10 @@ li.info a {
   0% {
     opacity: 1;
   }
-  25% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
-  60% {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+  95% {
+    opacity: 1;
   }
   100% {
-    -webkit-transform: scale(0.1);
-            transform: scale(0.1);
     opacity: 0;
   }
 }
